# thermo-hygrometer

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
boards/: esp32_devkitc_wroom_procpu.overlay
src/: bme280_sensor.c  bme280_sensor.h  config.h  main.c  mqtt_publisher.c  mqtt_publisher.h  wifi.c  wifi.h
